fix : z-index 1 sur etiquette "nouveau"

--- a/sass/layouts/_container.scss
+++ b/sass/layouts/_container.scss
@@ -28,6 +28,7 @@
             background: #99E2D0;
             right: 20px;
             top: 20px;
+            z-index: 1;
 
             p {
                 color: #058A6A;
